<resources>
    <string name="app_name">NCC Mobile</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="price">Price: </string>
    <string name="quantity">Quantity in Stock: </string>
    <string name="cartBtn">Add To Cart</string>
    <string name="favBtn">Favorite</string>
    <string name="drawer_close">close drawer</string>
    <string name="drawer_open">open drawer</string>

    <string-array name="nav_titles_array">
        <item>Items</item>
        <item>Cart</item>
        <item>Favorites</item>
        <item>My Profile</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

</resources>
